Crashes playing Alembic with empty frames and velocities #94713

Closed
opened 2022-01-07 13:35:54 +01:00 by Valentin Bonhomme · 7 comments

System Information
Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Broken: version: 3.1.0-alpha, branch: master, commit date: 2022-01-06 23:21, hash: e6ca0b33e920
Worked: version:2.92, branch: master, commit date:2021-02-24 16:25, hash: '02948a2cab44'

Short description of error
Blender crashes when I tried to play an Alembic file containing velocities and some empty frame.

Exact steps for others to reproduce the error
To reproduce the error please change the frame rate to 30 fps. Then import the Alembic file attached, and play the sequence. Blender crashes at the frame 42.

The frame 42 is the first 'empty' frame of the sequence (frame with 0 vertices).
Moreover, if remove the 'Velocity Attribute' in the MeshSequenceCache, Blender doesn't crashes.

table_velocities.abc

**System Information** Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Broken: version: 3.1.0-alpha, branch: master, commit date: 2022-01-06 23:21, hash: `e6ca0b33e920` Worked: version:2.92, branch: master, commit date:2021-02-24 16:25, hash: '02948a2cab44' **Short description of error** Blender crashes when I tried to play an Alembic file containing velocities and some empty frame. **Exact steps for others to reproduce the error** To reproduce the error please change the frame rate to 30 fps. Then import the Alembic file attached, and play the sequence. Blender crashes at the frame 42. The frame 42 is the first 'empty' frame of the sequence (frame with 0 vertices). Moreover, if remove the 'Velocity Attribute' in the MeshSequenceCache, Blender doesn't crashes. [table_velocities.abc](https://archive.blender.org/developer/F12792880/table_velocities.abc)

Added subscriber: @ValentinBonhomme

Added subscriber: @ValentinBonhomme

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm crash on assert BLI_assert(num_velocity_vectors == config.mesh->totvert)

>	blender.exe!blender::io::alembic::read_velocity(const std::shared_ptr<Alembic::Abc::v12::TypedArraySample<Alembic::Abc::v12::V3fTPTraits>> & velocities, const blender::io::alembic::CDStreamConfig & config, const float velocity_scale) Line 471	C++

 	blender.exe!blender::io::alembic::read_mesh_sample(const std::string & iobject_full_name, blender::io::alembic::ImportSettings * settings, const Alembic::AbcGeom::v12::IPolyMeshSchema & schema, const Alembic::Abc::v12::ISampleSelector & selector, blender::io::alembic::CDStreamConfig & config) Line 522	C++
 	blender.exe!blender::io::alembic::AbcMeshReader::read_mesh(Mesh * existing_mesh, const Alembic::Abc::v12::ISampleSelector & sample_sel, int read_flag, const char * velocity_name, float velocity_scale, const char * * err_str) Line 775	C++
 	blender.exe!ABC_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, float time, const char * * err_str, int read_flag, const char * velocity_name, float velocity_scale) Line 801	C++
 	blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 241	C
 	blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 999	C
 	blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 875	C++
 	blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1224	C++
 	blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1866	C++
 	blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1996	C++
 	blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 196	C
 	blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 393	C
 	blender.exe!blender::deg::DepsgraphNodeBuilder::build_object_data_geometry::__l2::<lambda>(Depsgraph * depsgraph) Line 1503	C++
 	[External Code]	
 	blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 120	C++
 	blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 132	C++
 	blender.exe!Task::operator()() Line 179	C++
 	blender.exe!tbb::internal::function_task<Task>::execute() Line 1060	C++
 	[External Code]	
 	blender.exe!tbb::task::wait_for_all() Line 821	C++
 	blender.exe!tbb::internal::task_group_base::wait() Line 168	C++
 	blender.exe!tbb_task_pool_work_and_wait(TaskPool * pool) Line 254	C++
 	blender.exe!BLI_task_pool_work_and_wait(TaskPool * pool) Line 501	C++
 	blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 401	C++
 	blender.exe!deg_flush_updates_and_refresh(blender::deg::Depsgraph * deg_graph) Line 61	C++
 	blender.exe!DEG_evaluate_on_framechange(Depsgraph * graph, float frame) Line 88	C++
 	blender.exe!BKE_scene_graph_update_for_newframe_ex(Depsgraph * depsgraph, const bool clear_recalc) Line 2664	C
 	blender.exe!BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 2712	C
 	blender.exe!ED_update_for_newframe(Main * bmain, Depsgraph * depsgraph) Line 1729	C
 	blender.exe!screen_animation_step_invoke(bContext * C, wmOperator * UNUSED_op, const wmEvent * event) Line 4738	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1313	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2314	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2667	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 2994	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3725	C
 	blender.exe!WM_main(bContext * C) Line 642	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564	C
 	[External Code]	

Can confirm crash on assert `BLI_assert(num_velocity_vectors == config.mesh->totvert)` ``` > blender.exe!blender::io::alembic::read_velocity(const std::shared_ptr<Alembic::Abc::v12::TypedArraySample<Alembic::Abc::v12::V3fTPTraits>> & velocities, const blender::io::alembic::CDStreamConfig & config, const float velocity_scale) Line 471 C++ blender.exe!blender::io::alembic::read_mesh_sample(const std::string & iobject_full_name, blender::io::alembic::ImportSettings * settings, const Alembic::AbcGeom::v12::IPolyMeshSchema & schema, const Alembic::Abc::v12::ISampleSelector & selector, blender::io::alembic::CDStreamConfig & config) Line 522 C++ blender.exe!blender::io::alembic::AbcMeshReader::read_mesh(Mesh * existing_mesh, const Alembic::Abc::v12::ISampleSelector & sample_sel, int read_flag, const char * velocity_name, float velocity_scale, const char * * err_str) Line 775 C++ blender.exe!ABC_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, float time, const char * * err_str, int read_flag, const char * velocity_name, float velocity_scale) Line 801 C++ blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 241 C blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 999 C blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 875 C++ blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1224 C++ blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1866 C++ blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1996 C++ blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 196 C blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 393 C blender.exe!blender::deg::DepsgraphNodeBuilder::build_object_data_geometry::__l2::<lambda>(Depsgraph * depsgraph) Line 1503 C++ [External Code] blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 120 C++ blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 132 C++ blender.exe!Task::operator()() Line 179 C++ blender.exe!tbb::internal::function_task<Task>::execute() Line 1060 C++ [External Code] blender.exe!tbb::task::wait_for_all() Line 821 C++ blender.exe!tbb::internal::task_group_base::wait() Line 168 C++ blender.exe!tbb_task_pool_work_and_wait(TaskPool * pool) Line 254 C++ blender.exe!BLI_task_pool_work_and_wait(TaskPool * pool) Line 501 C++ blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 401 C++ blender.exe!deg_flush_updates_and_refresh(blender::deg::Depsgraph * deg_graph) Line 61 C++ blender.exe!DEG_evaluate_on_framechange(Depsgraph * graph, float frame) Line 88 C++ blender.exe!BKE_scene_graph_update_for_newframe_ex(Depsgraph * depsgraph, const bool clear_recalc) Line 2664 C blender.exe!BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 2712 C blender.exe!ED_update_for_newframe(Main * bmain, Depsgraph * depsgraph) Line 1729 C blender.exe!screen_animation_step_invoke(bContext * C, wmOperator * UNUSED_op, const wmEvent * event) Line 4738 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1313 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2314 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2667 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 2994 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129 C blender.exe!wm_event_do_handlers(bContext * C) Line 3725 C blender.exe!WM_main(bContext * C) Line 642 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564 C [External Code] ```

This issue was referenced by 45bc4e3209

This issue was referenced by 45bc4e320970f3d7f952fd0d0fa762322d407bd7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-08 20:46:58 +01:00

Thanks Kevin and Richard !
Great support team !

Thanks Kevin and Richard ! Great support team !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94713
No description provided.